--- a/Resources/Prototypes/Recipes/Lathes/cargo.yml
+++ b/Resources/Prototypes/Recipes/Lathes/cargo.yml
@@ -1,6 +1,7 @@
 - type: latheRecipe
   id: ConveyorBeltAssembly
   result: ConveyorBeltAssembly
+  category: Circuitry
   completetime: 4
   materials:
     Steel: 250
