--- a/Resources/Prototypes/Recipes/Lathes/mech_parts.yml
+++ b/Resources/Prototypes/Recipes/Lathes/mech_parts.yml
@@ -3,10 +3,10 @@
 - type: latheRecipe
   abstract: true
   id: BaseMechPartRecipe
-  category: Mech
+  category: Mechs
   completetime: 10
 
-# Recipes
+## Recipes
 
 # Ripley
 - type: latheRecipe
