--- a/Resources/Prototypes/Recipes/Lathes/tiles.yml
+++ b/Resources/Prototypes/Recipes/Lathes/tiles.yml
@@ -1,4 +1,4 @@
-# Base Prototypes
+# Base prototypes
 
 - type: latheRecipe
   abstract: true
@@ -54,7 +54,7 @@
     - Tiles
     - White
 
-# Recipes
+## Recipes
 
 # Dark tiles
 - type: latheRecipe
