--- a/Resources/Prototypes/Recipes/Lathes/powercells.yml
+++ b/Resources/Prototypes/Recipes/Lathes/powercells.yml
@@ -43,6 +43,7 @@
 - type: latheRecipe
   id: PowerCageSmall
   result: PowerCageSmall
+  category: Parts
   completetime: 3
   materials:
     Steel: 200
@@ -51,6 +52,7 @@
 - type: latheRecipe
   id: PowerCageMedium
   result: PowerCageMedium
+  category: Parts
   completetime: 6
   materials:
     Steel: 500
@@ -61,6 +63,7 @@
 - type: latheRecipe
   id: PowerCageHigh
   result: PowerCageHigh
+  category: Parts
   completetime: 10
   materials:
     Steel: 600
